<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.cryptomator</groupId>
	<artifactId>cli</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>Cryptomator CLI</name>
	<description>Command line program to access encrypted files via WebDAV.</description>
	<url>https://github.com/cryptomator/cli</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<jdk.version>22</jdk.version>

		<!-- native image options -->
		<mainClass>org.cryptomator.cli.CryptomatorCli</mainClass>
		<native.optimization>-Ob</native.optimization> <!-- default: no optimization/dev build-->

		<!-- runtime dependencies -->
		<cryptofs.version>2.7.0-beta1</cryptofs.version>
		<webdav-nio.version>2.0.6</webdav-nio.version>
		<fuse-nio.version>5.0.0</fuse-nio.version>
		<logback.version>1.5.6</logback.version>
		<slf4j.version>2.0.16</slf4j.version>

		<!-- build dependencies -->
		<jetbrains.annotations.version>24.0.1</jetbrains.annotations.version>
		<picocli.version>4.7.6</picocli.version>

		<!-- maven plugins -->
		<maven-compiler.version>3.13.0</maven-compiler.version>
		<maven-jar.version>3.3.0</maven-jar.version>
		<maven-shade.version>3.6.0</maven-shade.version>
		<maven-exec.version>3.4.1</maven-exec.version>
	</properties>

	<licenses>
		<license>
			<name>GNU Affero General Public License (AGPL) version 3.0</name>
			<url>https://www.gnu.org/licenses/agpl.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Sebastian Stenzel</name>
			<email>sebastian.stenzel@gmail.com</email>
			<timezone>+1</timezone>
			<organization>cryptomator.org</organization>
			<organizationUrl>http://cryptomator.org</organizationUrl>
		</developer>
		<developer>
			<name>Armin Schrenk</name>
			<email>armin.schrenk@skymatic.de</email>
			<timezone>+1</timezone>
			<organization>Skymatic GmbH</organization>
			<organizationUrl>https://skymatic.de</organizationUrl>
		</developer>
	</developers>

	<dependencies>
		<dependency>
			<groupId>org.cryptomator</groupId>
			<artifactId>cryptofs</artifactId>
			<version>${cryptofs.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cryptomator</groupId>
			<artifactId>webdav-nio-adapter</artifactId>
			<version>${webdav-nio.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cryptomator</groupId>
			<artifactId>fuse-nio-adapter</artifactId>
			<version>${fuse-nio.version}</version>
		</dependency>

		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>${picocli.version}</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>org.fusesource.jansi</groupId>
			<artifactId>jansi</artifactId>
			<version>2.4.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler.version}</version>
				<configuration>
					<release>${jdk.version}</release>
					<showWarnings>true</showWarnings>
					<annotationProcessorPaths>
						<path>
							<groupId>info.picocli</groupId>
							<artifactId>picocli-codegen</artifactId>
							<version>${picocli.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar.version}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${mainClass}</mainClass>
								</transformer>
								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
									<resource>META-INF/services/org.cryptomator.integrations.mount.MountService</resource>
								</transformer>
								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
									<resource>META-INF/services/org.cryptomator.jfuse.api.FuseBuilder</resource>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${maven-exec.version}</version>
				<executions>
					<execution>
						<id>test-run</id>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>${env.JAVA_HOME}/bin/java</executable>
					<arguments>
						<argument>--module-path</argument>
						<modulepath/>
						<argument>--enable-native-access=org.cryptomator.jfuse.linux,org.cryptomator.jfuse.win,org.cryptomator.jfuse.mac</argument>
						<argument>--module</argument>
						<argument>org.cryptomator.cli/${mainClass}</argument>
						<argument>--password:stdin</argument>
						<argument>--mounter=org.cryptomator.frontend.fuse.mount.WinFspNetworkMountProvider</argument>
						<argument>--mountPoint=X:\\</argument>
						<argument>T:\\vaultFormat8</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
